force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>card</fullName>
                <label>Card</label>
            </value>
            <value>
                <fullName>bank_account</fullName>
                <label>Bank Account</label>
            </value>
            <value>
                <fullName>ach_debit</fullName>
                <label>ACH Debit</label>
            </value>
            <value>
                <fullName>wire_transfer</fullName>
                <label>Wire Transfer</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>