force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice__c</fullName>
    <description>Lookup to the Stripe Invoice custom object.</description>
    <label>Stripe Invoice</label>
    <referenceTo>Stripe_Invoice__c</referenceTo>
    <relationshipLabel>Stripe Payment Transactions</relationshipLabel>
    <relationshipName>Stripe_Payment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>