force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>