force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>initial_payment</fullName>
                <label>Initial Payment</label>
            </value>
            <value>
                <fullName>recurring_payment</fullName>
                <label>Recurring Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>